# test-token

./: Anchor.toml  package-lock.json  package.json
programs/test-token/: Cargo.toml
programs/test-token/src/: lib.rs
tests/: test-token.ts  token-transfer.ts
